<resources>
    <string name="app_name">Rescate Animal</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    //---- GOOGLE MAPS KEY
    <string name="GOOGLE_MAP_DEVELOPER_KEY_ANDROID_LUIS">AIzaSyA9XZ3gY_kg2GV2AODLqUOUBqbm0vCSFos</string>
    <string name="GOOGLE_MAP_DEVELOPER_KEY_ANDROID_VICENTE">AIzaSyCqLhGsEb_o-AhFYmWL5aIksrVvs-nlWYU</string>
    <string name="GOOGLE_MAP_DEVELOPER_KEY_ANDROID_JACOB">AIzaSyB3MNPZRuUfuv22aUeICanVarGBzy40duk</string>

    //Drawer Strings
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="drawer_title">Menú</string>

    //----Activigty Intro
    <string name="inicioText">Ayúdalos a Regresar a Casa</string>
    <string name="loginText">Login</string>
    <string name="registerText">Registrate</string>

    //----Activity Login
    <string name="nombreLoginHint">Nombre</string>
    <string name="contraLoginHint">Contraseña</string>
    <string name="registroLoginText">¿No tienes una cuenta? Registrate</string>

    //----Activity Register
    <string name="nombreRegisterHint">Tu Nombre</string>
    <string name="emailRegisterHint">Tu e-mail</string>
    <string name="phoneRegisterHint">Tu Teléfono</string>

    <string name="contraRegisterHint">Escoge una Contraseña</string>
    <string name="rcontraRegisterHint">Repita la Contraseña</string>

    <string name="crearRegistroText">Crear tu Cuenta</string>
    <string name="poseeRegistroText">¿Ya tienes tu cuenta? Login</string>
    <string name="dialogRegisterTitle">Información</string>
    <string name="dialogRegisterDescription">Esta funcionalidad no se encuentra activa en estos momentos.</string>

    //----Activity Home
    <string name="homeTitle">¡Bienvenido Logic Studio!</string>
    <string name="homeSubTitle">Ayuda a un animal a regresar a casa y deja tu huella</string>
    <string name="homeButton">Reportar un Animal en Peligro</string>
    <string name="hechopor">Hecho en Panamá por Logic Studio  </string>
    //----Activity Info Animal
    <string name="infoADescription">Cómo cuidarlos si los encuentras</string>
    <string name="infoBtnUbicacion">Ver Ubicación</string>
    <string name="infoTitleComoAyu">¿Cómo ayudarlos en la calle?</string>
    <string name="infoBtnVerMas">Más Información</string>
    <string name="website">www.logicstudio.net</string>


    //----Activity Mapas
    <string name="mapTitleVerUbicacion">Ubicaciones</string>


    //----Activity Perfil
    <string name="perfilTitle">Perfil</string>
    <string name="contactTitle">Contáctenos</string>

    <string name="resultTitle">Felicidades!</string>

    <string name="perfilSubtitleHuella">Reporta animales, colecta huellas.</string>
    <string name="perfilActDatos">Actualizar Datos</string>
    <string name="sitioappc">www.appcpanama.org</string>

    <string name="perfilCambiarContra">Cambiar Contraseña</string>
    <string name="perfilCerrarSesion">Cerrar Sesión</string>


    //----Activity Reporte
    <string name="errorTituloPermiso">Solicitud de Permiso</string>
    <string name="errorDescCamera">Para acceder a la funcionalidad, debe asignarle permiso para utilizar la cámara.</string>
    <string name="errorDescWrite">Para acceder a la funcionalidad, debe asignarle permiso para almacenar la foto.</string>

    //----Activity FinalReporte
    <string name="finalReporteTitle">Gracias por Reportar</string>
    <string name="finalReporteMessage">Personal de la Fundación\nestará acercandose a la\nubicación para rescatar\nal animal.</string>
    <string name="finalReportLeftText">ganaste</string>
    <string name="finalReportRightText">\u0020huella</string>
    <string name="finalReportRegresar">Regresar</string>


    //---- Text Example
    <string name="textTest">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent dictum libero et placerat aliquet. Etiam semper augue ligula, a lacinia enim sollicitudin non. Integer eget nisl at ipsum tempus placerat. Pellentesque nec lacus dui. Cras venenatis libero sodales tellus rhoncus, nec malesuada turpis euismod. Donec vel malesuada ipsum, sit amet laoreet sapien. Duis finibus maximus est ac tempus. Fusce tincidunt, mi ac congue vulputate, ex est finibus leo, eleifend vestibulum massa ex sed massa. Aliquam posuere, magna id hendrerit ornare, velit eros molestie tortor, ac maximus felis massa vitae dui. Aliquam erat volutpat.</string>
    <string name="nombreTest">Logic Studio</string>
    <string name="nombreappc">Asociación Panamericana para la Conservación</string>

    <string name="emailTest">Panama@logicstudio.net</string>
    <string name="comparte">Compartir...</string>
    <string name="huellasTest">20 Huellas</string>
    <string name="valueExampleFinalReport">1</string>

    <string name="mensajeHuella">Felicidades, has ganado 4 huellas!</string>

    //----Number Contact
    <string name="numberContact">+5073171258</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_activity__valida__login">Activity_Valida_Login</string>
    <string name="ayudalosACasa">Ayúdalo a volver a casa</string>
    <string name="dinosTipoAnimal">Dinos qué tipo de animal</string>
    <string name="title_activity_participa">Participa</string>
    <string name="participaHtml"></string>
    <string name="title_activity_social">SocialActivity</string>

    <string name="shareThis">Compartir</string>
    <string name="correoappc">info@appcpanama.org</string>

    <string name="phoneappc">317-1258</string>
    <string name="title_activity_contact_screen">ContactScreen</string>


</resources>
