<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dlay_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:elevation="0dp">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
            </android.support.design.widget.AppBarLayout>

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:id="@+id/frmlay_home_root"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="45dp"
                        android:gravity="center"
                        android:text="@string/homeTitle"
                        android:textColor="@color/colorWhite"
                        android:textSize="19sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="65dp"
                        android:layout_marginRight="65dp"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/homeSubTitle"
                        android:textColor="@color/colorWhite"
                        android:textSize="19sp"
                        android:textStyle="bold" />


                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginTop="45dp"
                        android:background="@drawable/btn_yellow_background"
                        android:text="@string/homeButton"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />

                </LinearLayout>

            </android.support.v4.widget.NestedScrollView>


        </android.support.design.widget.CoordinatorLayout>

    </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rclr_home_drawerlateral"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@color/colorWhite"
        android:scrollbars="vertical" />

</android.support.v4.widget.DrawerLayout>
